--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <header class="header">
     <h1>{{ appTitle }}</h1>
     <input class="new-todo"
-           placeholder="What needs to be done?"
+           [placeholder]="placeholderText"
            autofocus>
   </header>
   <!-- This section should be hidden by default and shown when there are todos -->
