--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,8 @@
     <h1>{{ appTitle }}</h1>
     <input class="new-todo"
            [placeholder]="placeholderText"
+           #todo
+           (keyup)="onKey($event, todo)"
            autofocus>
   </header>
   <!-- This section should be hidden by default and shown when there are todos -->
