set inputElement style.background-color to green

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,7 @@
     <input class="new-todo"
            [placeholder]="placeholderText"
            #todo
+           [style.background-color]="background"
            (keyup.enter)="newTodo(todo)"
            autofocus>
   </header>
