--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <section class="todoapp">
   <header class="header">
-    <h1>{{ appTitle }}-{{todoValue}}</h1>
+    <h1>{{ appTitle }}</h1>
     <input class="new-todo"
            [placeholder]="placeholderText"
            #todo
@@ -10,57 +10,56 @@
            autofocus>
   </header>
   <!-- This section should be hidden by default and shown when there are todos -->
-  <section class="main">
+  <section class="main"
+           *ngIf="todos?.length > 0">
     <input class="toggle-all"
            type="checkbox">
     <label for="toggle-all">Mark all as complete</label>
     <ul class="todo-list">
       <!-- These are here just to show the structure of the list items -->
       <!-- List items should get the class `editing` when editing and `completed` when marked as completed -->
-      <li class="completed">
+      <li *ngFor="let todo of todos; let idx = index"
+          [ngClass]="{completed: todo.completed}">
         <div class="view">
           <input class="toggle"
                  type="checkbox"
-                 checked>
-          <label>Taste JavaScript</label>
-          <button class="destroy"></button>
+                 [(ngModel)]="todo.checked">
+          <label>{{ todo.name }}</label>
+          <button class="destroy"
+                  (click)="removeTodo(idx)"></button>
         </div>
         <input class="edit"
-               value="Create a TodoMVC template">
-      </li>
-      <li>
-        <div class="view">
-          <input class="toggle"
-                 type="checkbox">
-          <label>Buy a unicorn</label>
-          <button class="destroy"></button>
-        </div>
-        <input class="edit"
-               value="Rule the web">
+               value="Create a TodoMVC template"
+               (click)="todo.isEdit = !todo.isEdit">
       </li>
     </ul>
   </section>
   <!-- This footer should hidden by default and shown when there are todos -->
   <footer class="footer">
     <!-- This should be `0 items left` by default -->
-    <span class="todo-count"><strong>0</strong> item left</span>
+    <span class="todo-count"><strong>{{ totalCount }}</strong> item left</span>
     <!-- Remove this if you don't implement routing -->
     <ul class="filters">
       <li>
         <a class="selected"
-           href="#/">All</a>
+           href="javascript:void(0)"
+           (click)="selectAll()">All</a>
       </li>
       <li>
-        <a href="#/active">Active</a>
+        <a href="javascript:void(0)"
+           (click)="onActive()">Active</a>
       </li>
       <li>
-        <a href="#/completed">Completed</a>
+        <a href="javascript:void(0)"
+           (click)="onComplete()">Completed</a>
       </li>
     </ul>
     <!-- Hidden if no completed items are left ↓ -->
-    <button class="clear-completed">Clear completed</button>
+    <button class="clear-completed"
+            (click)="clearComplete()">Clear completed</button>
   </footer>
 </section>
+
 <footer class="info">
   <p>Double-click to edit a todo</p>
   <!-- Remove the below line ↓ -->
@@ -69,5 +68,7 @@
   <p>Created by <a href="http://todomvc.com">you</a></p>
   <p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
 </footer>
+
+{{ todos | json }}
 
 <router-outlet></router-outlet>
