--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,49 +14,40 @@
            *ngIf="todos?.length > 0">
     <input class="toggle-all"
            type="checkbox">
-    <label for="toggle-all">Mark all as complete</label>
+    <label for="toggle-all"
+           (click)="complteAll()">Mark all as complete</label>
     <ul class="todo-list">
       <!-- These are here just to show the structure of the list items -->
       <!-- List items should get the class `editing` when editing and `completed` when marked as completed -->
       <li *ngFor="let todo of todos; let idx = index"
-          [ngClass]="{completed: todo.completed}">
+          [ngClass]="{completed: todo.isCompleted}">
         <div class="view">
           <input class="toggle"
                  type="checkbox"
-                 [(ngModel)]="todo.checked">
+                 [(ngModel)]="todo.isCompleted">
           <label>{{ todo.name }}</label>
           <button class="destroy"
+                  [disabled]="selectedStatus !== 'All'"
                   (click)="removeTodo(idx)"></button>
         </div>
-        <input class="edit"
-               value="Create a TodoMVC template"
-               (click)="todo.isEdit = !todo.isEdit">
       </li>
     </ul>
   </section>
   <!-- This footer should hidden by default and shown when there are todos -->
   <footer class="footer">
     <!-- This should be `0 items left` by default -->
-    <span class="todo-count"><strong>{{ totalCount }}</strong> item left</span>
+    <span class="todo-count"><strong>{{ itemLeft }}</strong> item left</span>
     <!-- Remove this if you don't implement routing -->
     <ul class="filters">
-      <li>
-        <a class="selected"
+      <li *ngFor="let status of displayStatus">
+        <a [ngClass]="{selected: selectedStatus === status}"
            href="javascript:void(0)"
-           (click)="selectAll()">All</a>
-      </li>
-      <li>
-        <a href="javascript:void(0)"
-           (click)="onActive()">Active</a>
-      </li>
-      <li>
-        <a href="javascript:void(0)"
-           (click)="onComplete()">Completed</a>
+           (click)="selectedStatus = status">{{ status }}</a>
       </li>
     </ul>
     <!-- Hidden if no completed items are left ↓ -->
     <button class="clear-completed"
-            (click)="clearComplete()">Clear completed</button>
+            (click)="clearAllComplete()">Clear completed</button>
   </footer>
 </section>
 
