--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,7 +21,9 @@
       <!-- List items should get the class `editing` when editing and `completed` when marked as completed -->
       <li *ngFor="let todo of todos; let idx = index"
           [ngClass]="{completed: todo.isCompleted}">
-        <div class="view">
+        <div class="view"
+             *ngIf="!todo.isEdit; else editTmpl"
+             (dblclick)="todo.isEdit = !todo.isEdit">
           <input class="toggle"
                  type="checkbox"
                  [(ngModel)]="todo.isCompleted">
@@ -30,6 +32,12 @@
                   [disabled]="selectedStatus !== 'All'"
                   (click)="removeTodo(idx)"></button>
         </div>
+        <ng-template #editTmpl>
+          <input class="edit"
+                 [(ngModel)]="todo.name"
+                 (blur)="todo.isEdit = !todo.isEdit">
+        </ng-template>
+
       </li>
     </ul>
   </section>
